# pactown

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  examples.md  goal.yaml  project.functions.toon  project.toon  pyproject.toml  saas.pactown.yaml
docs/: CLOUDFLARE_WORKERS_COMPARISON.md  CONFIGURATION.md  DEPLOYMENT.md  FAST_START.md  GENERATOR.md  LOGGING.md  NETWORK.md  QUADLET.md  SECURITY.md  SECURITY_POLICY.md  SPECIFICATION.md  TESTING_MULTIPLATFORM.md  USER_ISOLATION.md
examples/api-gateway-webhooks/: README.md
examples/desktop-electron/: README.md
examples/desktop-pyqt/: README.md
examples/email-llm-responder/: README.md
examples/fast-start-demo/: README.md  demo.py
examples/microservices/: README.md  saas.pactown.yaml
examples/microservices/services/go-gateway/: README.md
examples/microservices/services/node-api/: README.md
examples/microservices/services/python-ml/: README.md
examples/mobile-capacitor/: README.md
examples/mobile-kivy/: README.md
examples/quadlet-vps/: README.md  sample.container
examples/realtime-notifications/: README.md
examples/saas-platform/: README.md  saas.pactown.yaml
examples/saas-platform/.pactown-sandboxes/api/app/: database.py  main.py  models.py
examples/saas-platform/.pactown-sandboxes/database/: db.py  main.py  requirements.txt
examples/saas-platform/.pactown-sandboxes/web/: requirements.txt  server.py
examples/saas-platform/services/api/: README.md
examples/saas-platform/services/cli/: README.md
examples/saas-platform/services/database/: README.md
examples/saas-platform/services/gateway/: README.md
examples/saas-platform/services/web/: README.md
examples/security-policy/: README.md  demo.py
examples/user-isolation/: README.md  demo.py
src/pactown/: __init__.py  cli.py  config.py  error_context.py  events.py  fast_start.py  generator.py  iac.py  llm.py  markpact_blocks.py  network.py  nfo_config.py  node_cache.py  orchestrator.py  parallel.py  platform.py  resolver.py  runner_api.py  runner_types.py  sandbox_helpers.py  sandbox_manager.py  security.py  service_runner.py  targets.py  user_isolation.py
src/pactown/builders/: __init__.py  base.py  desktop.py  mobile.py  registry.py  web.py
src/pactown/deploy/: __init__.py  ansible.py  base.py  compose.py  docker.py  kubernetes.py  podman.py  quadlet.py  quadlet_api.py  quadlet_shell.py
src/pactown/registry/: __init__.py  client.py  models.py  server.py
tests/: __init__.py  conftest.py  test_ansible.py  test_builders.py  test_config.py  test_cross_platform.py  test_deploy_dockerfile.py  test_deploy_optimizations.py  test_deploy_platforms.py  test_e2e_build.py  test_e2e_build_extended.py  test_e2e_deploy_desktop_mobile.py  test_electron_xvfb.py  test_iac_manifest.py  test_llm.py  test_markpact_blocks.py  test_markpact_target_blocks.py  test_network.py  test_node_cache.py  test_parallel.py  test_platform.py  test_quadlet_security.py  test_registry.py  test_resolver.py  test_runner_api.py  test_sandbox_manager_env_injection.py  test_sandbox_manager_node_deps.py  test_sandbox_manager_node_run_env.py  test_sandbox_manager_venv_heal.py  test_security.py  test_service_runner_fast_run_fallback.py  test_service_runner_validation.py  test_targets.py  test_user_isolation_manager.py
tools/: sync_pactown_com_dependency.py  validate_artifacts_docker.py
