[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pactown"
version = "0.1.84"
description = "Decentralized Service Ecosystem Orchestrator - Build interconnected microservices from Markdown using markpact"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "wronai" }]
keywords = ["markpact", "microservices", "decentralized", "ecosystem", "orchestrator", "markdown", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    "markpact>=0.1.10",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "pydantic>=2.0",
    "watchfiles>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1",
    "build",
    "twine",
    "bump2version>=1.0",
]
security = [
    "bandit>=1.7",
    "pip-audit>=2.6",
    "safety>=2.3",
    "semgrep>=1.50",
]
llm = [
    "lolm>=0.1.6",
]
all = [
    "lolm>=0.1.6",
]

[project.scripts]
pactown = "pactown.cli:main"
pactown-registry = "pactown.registry.server:main"
pactown-quadlet-api = "pactown.deploy.quadlet_api:run_api"
pactown-runner-api = "pactown.runner_api:main"

[project.urls]
Homepage = "https://github.com/wronai/pactown"
Repository = "https://github.com/wronai/pactown"
Issues = "https://github.com/wronai/pactown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pactown"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:pytest_aiohttp -p no:aiohttp.pytest_plugin"
